--- a/類別/lesson2.ipynb
+++ b/類別/lesson2.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -49,9 +49,26 @@
     "class Student(Person):\n",
     "    def __init__(self,name:str,chinese:int,english:int,math:int):\n",
     "        super().__init__(n=name)\n",
-    "        self.chinese = chinese\n",
-    "        self.english = english\n",
-    "        self.math = math\n",
+    "        self.__chinese = chinese # attribute是可以更改內容\n",
+    "        self.__english = english\n",
+    "        self.__math = math\n",
+    "    \n",
+    "    @property # property可以設定不可以更改內容\n",
+    "    def chinese(self):\n",
+    "        return self.__chinese\n",
+    "    @property\n",
+    "    def english(self):\n",
+    "        return self.__english\n",
+    "    @property\n",
+    "    def math(self):\n",
+    "        return self.__math\n",
+    "    @property\n",
+    "    def scores(self):\n",
+    "        return self.__math+self.__chinese+self.__english\n",
+    "    \n",
+    "    def average(self): # 自訂實體的方法(method)\n",
+    "        return self.scores / 3\n",
+    "    \n",
     "    def __repr__(self):\n",
     "        message = f\"我是Student的實體,我的名字是:{self.name}\\n\"\n",
     "        message += f\"國文分數:{self.chinese}\\n\"\n",
@@ -68,34 +85,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "我是Person的實體,我的名字是:main1\n",
       "我是Student的實體,我的名字是:main1\n",
       "國文分數:89\n",
       "英文分數:72\n",
       "數學分數:94\n",
       "\n",
-      "我是Person的實體,我的名字是:main2\n",
-      "我是Student的實體,我的名字是:main2\n",
-      "國文分數:84\n",
-      "英文分數:92\n",
-      "數學分數:65\n",
-      "\n"
+      "總分:255\n",
+      "平均:85.0\n"
      ]
     }
    ],
    "source": [
-    "print(p1)\n",
     "print(s1)\n",
-    "\n",
-    "print(p2)\n",
-    "print(s2)"
+    "print(f\"總分:{s1.scores}\") # property\n",
+    "print(f\"平均:{s1.average():.1f}\") # method"
    ]
   }
  ],
