--- a/結構/list.ipynb
+++ b/結構/list.ipynb
@@ -58,6 +58,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 4 6 8 10\n",
+      "編號超出範圍\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(l1[0],end=\" \")\n",
+    "print(l1[1],end=\" \")\n",
+    "print(l1[2],end=\" \")\n",
+    "print(l1[3],end=\" \")\n",
+    "print(l1[4])\n",
+    "try:\n",
+    "    print(l1[5])\n",
+    "except IndexError:\n",
+    "    print(\"編號超出範圍\")\n",
+    "except Exception as e:\n",
+    "    print(f\"錯誤:{e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -139,6 +167,64 @@
     "index, value = 0, 2 #tuple拆解法\n",
     "print(index)\n",
     "print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O\n",
+      "u\n",
+      "O\n",
+      "b\n",
+      "=======\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'O'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name:str = \"OuOb\"\n",
+    "for word in name:\n",
+    "    print(word)\n",
+    "print(\"=======\")\n",
+    "name[0] #[index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ou\n",
+      "Ou\n",
+      "uO\n",
+      "uOb\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(name[0:2])\n",
+    "print(name[:2]) #前2個\n",
+    "print(name[-3:-1])\n",
+    "print(name[-3:]) #後3個"
    ]
   }
  ],
