--- a/pydantic/download1.ipynb
+++ b/pydantic/download1.ipynb
@@ -10,7 +10,12 @@
     "from requests import Response\n",
     "\n",
     "aqi_url = 'https://data.moenv.gov.tw/api/v2/aqx_p_488?api_key=e8dd42e6-9b8b-43f8-991e-b3dee723a52d&limit=1000&sort=datacreationdate desc&format=JSON'\n",
-    "res:Response = requests.request(\"GET\", aqi_url)\n",
+    "\n",
+    "try:\n",
+    "    res:Response = requests.request(\"GET\", aqi_url)\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "\n",
     "if res.ok:\n",
     "    print(\"成功!\")\n",
     "    print(res.text)\n",
@@ -25,7 +30,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "json_data:dict = res.json()\n",
+    "try:\n",
+    "    json_data:dict = res.json()\n",
+    "except requests.exceptions.JSONDecodeError:\n",
+    "    print(\"error\")\n",
+    "\n",
     "sites:list = json_data['records']\n",
     "for site in sites:\n",
     "    print(site)"
