--- a/pydantic/homework.ipynb
+++ b/pydantic/homework.ipynb
@@ -34,7 +34,7 @@
     "    address:dict = Address\n",
     "    projects = list[Project]\n",
     "\n",
-    "p = Person.model_validate_json(data)\n",
+    "p = Person.model_validate_json(content)\n",
     "print(p)"
    ]
   },
