--- a/window_0606/lesson2.ipynb
+++ b/window_0606/lesson2.ipynb
@@ -130,6 +130,65 @@
     "diff = now-datetime(2024,6,6)\n",
     "diff.seconds"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "第12個\n",
+      "第34個\n",
+      "第45個\n",
+      "第65個\n",
+      "第26個\n"
+     ]
+    }
+   ],
+   "source": [
+    "#map()\n",
+    "def square(x):\n",
+    "    return f'第{x}個'\n",
+    "num = [12, 34, 45, 65, 26]\n",
+    "str_list:list[str] = list(map(square, num))\n",
+    "print(\"\\n\".join(str_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "新北市 - 萬里 - aqi:17 - 狀態:良好 - 2024-06-06 11:00\n",
+      "臺中市 - 大甲（日南國小） - aqi:17 - 狀態:良好 - 2024-06-06 07:00\n",
+      "臺中市 - 大甲（日南國小） - aqi:18 - 狀態:良好 - 2024-06-06 09:00\n",
+      "苗栗縣 - 三義 - aqi:19 - 狀態:良好 - 2024-06-06 09:00\n",
+      "新竹縣 - 竹東 - aqi:20 - 狀態:良好 - 2024-06-06 08:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "data:list[dict] = [{'site_name': '萬里', 'county': '新北市', 'aqi': 17, 'status': '良好', 'pm25': 1.0, 'date': '2024-06-06 11:00'}, {'site_name': '大甲（日南國小）', 'county': '臺中市', 'aqi': 17, 'status': '良好', 'pm25': 6.0, 'date': '2024-06-06 07:00'}, {'site_name': '大甲（日南國小）', 'county': '臺中市', 'aqi': 18, 'status': '良好', 'pm25': 13.0, 'date': '2024-06-06 09:00'}, {'site_name': '三義', 'county': '苗栗縣', 'aqi': 19, 'status': '良好', 'pm25': 9.0, 'date': '2024-06-06 09:00'}, {'site_name': '竹東', 'county': '新竹縣', 'aqi': 20, 'status': '良好', 'pm25': 0.0, 'date': '2024-06-06 08:00'}]\n",
+    "\n",
+    "def abc(value:dict)->str:\n",
+    "    return f\"{value['county']} - {value['site_name']} - aqi:{value['aqi']} - 狀態:{value['status']} - {value['date']}\"\n",
+    "message_data:list[str] = list(map(abc, data))\n",
+    "print(\"\\n\".join(message_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
