--- a/window_dash/callback1.ipynb
+++ b/window_dash/callback1.ipynb
@@ -34,6 +34,95 @@
     "\n",
     "app.run(debug=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dash import Dash,dcc,html,Input,Output,callback\n",
+    "import pandas as pd\n",
+    "import plotly.express as px\n",
+    "\n",
+    "df = pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/gapminderDataFiveYear.csv')\n",
+    "app = Dash(__name__)\n",
+    "\n",
+    "display(df)\n",
+    "\n",
+    "int(df['year'].min())\n",
+    "int(df['year'].max())\n",
+    "{str(year):str(year) for year in df['year'].unique()}\n",
+    "df[df.year == 1952]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://127.0.0.1:8050/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x29644c13d90>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from dash import Dash,dcc,html,Input,Output,callback\n",
+    "import pandas as pd\n",
+    "import plotly.express as px\n",
+    "\n",
+    "df = pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/gapminderDataFiveYear.csv')\n",
+    "app = Dash(__name__)\n",
+    "\n",
+    "app.layout = html.Div([\n",
+    "    dcc.Graph(id='graph_width_slider'),\n",
+    "    dcc.Slider(\n",
+    "        min = df['year'].min(),\n",
+    "        max = df['year'].max(),\n",
+    "        step = None,\n",
+    "        value = df['year'].min(),\n",
+    "        marks = {str(year):str(year) for year in df['year'].unique()},\n",
+    "        id='year_slider'\n",
+    "    )\n",
+    "])\n",
+    "\n",
+    "@callback(\n",
+    "        Output('graph_width_slider','figure'),\n",
+    "        Input('year_slider','value')\n",
+    ")\n",
+    "def update_figure(selected_year:int):\n",
+    "    filterd_df = df[df.year == selected_year]\n",
+    "    fig = px.scatter(\n",
+    "        data_frame=filterd_df,\n",
+    "        x='gdpPercap',\n",
+    "        y='lifeExp',\n",
+    "        size='pop',\n",
+    "        color='continent',\n",
+    "        hover_name='country',\n",
+    "        log_x=True,\n",
+    "        size_max=55\n",
+    "    )\n",
+    "    fig.update_layout(transition_duration=5000)\n",
+    "\n",
+    "app.run(debug=True)"
+   ]
   }
  ],
  "metadata": {
