--- a/window_dash/callback1.ipynb
+++ b/window_dash/callback1.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x29644c13d90>"
+       "<IPython.lib.display.IFrame at 0x296453df290>"
       ]
      },
      "metadata": {},
@@ -120,6 +120,7 @@
     "        size_max=55\n",
     "    )\n",
     "    fig.update_layout(transition_duration=5000)\n",
+    "    return fig\n",
     "\n",
     "app.run(debug=True)"
    ]
