--- a/window_dash/callback1.ipynb
+++ b/window_dash/callback1.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x296453df290>"
+       "<IPython.lib.display.IFrame at 0x238e1262690>"
       ]
      },
      "metadata": {},
@@ -107,6 +107,7 @@
     "        Output('graph_width_slider','figure'),\n",
     "        Input('year_slider','value')\n",
     ")\n",
+    "\n",
     "def update_figure(selected_year:int):\n",
     "    filterd_df = df[df.year == selected_year]\n",
     "    fig = px.scatter(\n",
